--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,17 @@
         <item name="colorPrimary">@color/colorGrayLight</item>
         <item name="colorPrimaryDark">@color/colorGrayLight</item>
         <item name="colorAccent">@color/colorWhite</item>
+    </style>
 
+    <style name="TextViewData">
+        <item name="android:textSize">20dp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="color">@color/colorPrimaryDark</item>
+    </style>
+
+    <style name="FragmentContainers">
+        <item name="android:layout_marginTop">40dp</item>
+        <item name="android:layout_marginHorizontal">10dp</item>
     </style>
 
 </resources>
