--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -16,7 +16,12 @@
 
     <style name="FragmentContainers">
         <item name="android:layout_marginTop">40dp</item>
-        <item name="android:layout_marginHorizontal">10dp</item>
+        <item name="android:layout_marginHorizontal" tools:targetApi="o">10dp</item>
+    </style>
+
+    <style name="ListData">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">20dp</item>
     </style>
 
 </resources>
