--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -35,6 +35,7 @@
 
 
     <LinearLayout
+        android:id="@+id/ranking_position"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/recyclerViewRanking">
