--- a/app/src/main/res/layout/fragment_comparte.xml
+++ b/app/src/main/res/layout/fragment_comparte.xml
@@ -15,23 +15,47 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:text="Buscar"
-            android:textSize="16dp" />
+            android:textSize="20sp" />
 
-        <EditText
-            android:id="@+id/editText"
+
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="42dp"
             android:layout_weight="1"
-            android:drawableRight="@drawable/ic_search_black_24dp"
-            android:ems="10"
-            android:inputType="text" />
+            android:background="@drawable/background_search"
+            android:gravity="center"
+            android:orientation="horizontal">
+            <EditText
+                android:layout_weight="1"
+                android:id="@+id/editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:layout_marginHorizontal="12dp"
+                android:background="@null"
+                android:inputType="text|textNoSuggestions"
+                android:textColor="@color/colorGrayLight"
+                android:fontFamily="sans-serif-condensed-light"
+                tools:text="ANA LUZ"
+                />
+            <ImageView
+                android:id="@+id/search_comparte"
+                android:layout_weight="3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_search_black_24dp"/>
+        </LinearLayout>
+
+
     </LinearLayout>
 
     <LinearLayout
