--- a/app/src/main/res/layout/fragment_canjea.xml
+++ b/app/src/main/res/layout/fragment_canjea.xml
@@ -3,17 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".ui.Canjea">
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewCanjear"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/list_canjear" />
+        tools:listitem="@layout/list_canjear"
+        android:paddingBottom="130dp"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
