--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:layout_height="wrap_content"
     android:layout_marginHorizontal="20dp"
     tools:context=".ui.Ranking">
 
@@ -15,58 +14,55 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
         <TextView
             style="@style/TextViewData"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Poner ilustración aquí" />
-
     </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewRanking"
-        android:layout_width="match_parent"
-        android:layout_height="140dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
-        />
 
 
     <LinearLayout
         android:id="@+id/ranking_position"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerViewRanking">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@drawable/background_ranking_position"
+        app:layout_constraintTop_toBottomOf="@id/linearLayout5"
+        android:gravity="center">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/trofeo"
-            />
+            android:layout_margin="3dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="vertical"
-            android:layout_weight="1">
+            android:layout_margin="3dp"
+            android:gravity="center">
 
             <TextView
                 android:id="@+id/my_ranking_position"
+                style="@style/TextViewData"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
-                style="@style/TextViewData"
                 android:text="6to lugar"
-                />
+                android:textColor="@color/black"
+                android:textAlignment="center" />
+
             <TextView
                 android:id="@+id/my_total_points"
+                style="@style/TextViewData"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
-                style="@style/TextViewData"
-                android:text="Nombre con 20 puntos"/>
+                android:text="Nombre con 20 puntos"
+                android:textColor="@color/black"
+                android:textAlignment="center" />
 
         </LinearLayout>
 
@@ -74,9 +70,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_attach_money_black_24dp"
-            />
+            android:layout_margin="3dp"/>
     </LinearLayout>
 
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewRanking"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:paddingBottom="220dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ranking_position"
+        tools:listitem="@layout/list_ranking" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
