--- a/app/src/main/res/layout/list_canjear.xml
+++ b/app/src/main/res/layout/list_canjear.xml
@@ -7,7 +7,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@drawable/background_canjea_items"
+        >
 
         <ImageView
             android:id="@+id/img_canjear_item"
@@ -20,12 +22,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:layout_margin="10dp">
             <TextView
                 android:id="@+id/txt_canjea_nombre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:text="Taza"
+                android:textSize="16sp"
                 />
 
             <TextView
@@ -33,6 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:text="Taza"
+                android:textSize="16sp"
                 />
 
             <TextView
@@ -41,6 +46,7 @@
                 android:layout_height="wrap_content"
                 android:drawableRight="@drawable/ic_attach_money_black_24dp"
                 tools:text="1000"
+                android:textSize="16sp"
                 />
         </LinearLayout>
 
@@ -50,6 +56,8 @@
             android:layout_height="wrap_content"
             android:text="Agregar"
             android:layout_gravity="center"
+            android:backgroundTint="@color/orange"
+            android:textColor="@color/colorWhite"
             />
 
     </LinearLayout>
