--- a/app/src/main/res/layout/list_canjear.xml
+++ b/app/src/main/res/layout/list_canjear.xml
@@ -2,14 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal"
+    android:background="@drawable/background_canjea_items"
+    android:id="@+id/cv">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@drawable/background_canjea_items"
-        >
+
 
         <ImageView
             android:id="@+id/img_canjear_item"
@@ -59,8 +57,6 @@
             android:backgroundTint="@color/orange"
             android:textColor="@color/colorWhite"
             />
-
-    </LinearLayout>
 
 
 </LinearLayout>
