--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,6 +31,13 @@
         <item name="android:layout_margin">7dp</item>
     </style>
 
+    <style name="LoginBtn" parent="TextAppearance.AppCompat.Button">
+        <item name="android:background">@color/orangeLight</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_marginTop">12sp</item>
+
+    </style>
+
 
 
 </resources>
